[project]
name = "merc-module"
version = "0.1.0"
description = "Mercury module: calculates prep data for fortran mercury calculator."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
  "jupyter",
  "scikit-learn"
]

[tool.ruff]
exclude = [
    ".venv",
]